feat: add AI-powered refund agent workflow with Google Gemini integration and multi-channel notifications

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,41 @@
 # ===============================
-# n8n - Configuração de Host
+# n8n Configuration
 # ===============================
-N8N_HOST=localhost
-N8N_PORT=5678
-N8N_PROTOCOL=http
+WEBHOOK_URL= # A URL gerada pelo Ngrok (ex: https://sua-url.ngrok-free.app)
+N8N_HOST= # O host geralmente é localhost ou o nome dado pelo ngrok (ex: sua-url.ngrok-free.app)
+N8N_PORT=5678 # A porta padrão do n8n
+N8N_PROTOCOL=https # O protocolo deve ser https por causa do Ngrok
+N8N_ENCRYPTION_KEY= # Gere com: openssl rand -base64 32
+
+# ============================================
+# Google Cloud Project Credentials (Shared)
+# ============================================
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 # ===============================
-# n8n - Segurança
+# Google Sheets
 # ===============================
-N8N_ENCRYPTION_KEY=CHANGE_ME
+
+# Google Sheets - Agente de Reembolso (Aula 02)
+SHEETS_REFUND_ID=
+SHEETS_REFUND_TAB_NAME=
 
 # ===============================
-# Backup - Segurança
+# Telegram
 # ===============================
-BACKUP_PASSPHRASE=CHANGE_ME
+
+# Telegram - Agente de Reembolso (Aula 02)
+TELEGRAM_REFUND_BOT_TOKEN=
+TELEGRAM_REFUND_CHAT_ID=
+
+# ===============================
+# Backup - Segurança (HOST ONLY)
+# ===============================
+# Usada APENAS pelo Makefile (GPG)
+BACKUP_PASSPHRASE=
 
 # ===============================
 # Gemini (Google AI)
 # ===============================
-GEMINI_API_KEY=CHANGE_ME
+GEMINI_API_KEY=
