--- a/.dockerignore
+++ b/.dockerignore
@@ -7,6 +7,7 @@
 # =========================
 # Variáveis de ambiente
 # =========================
+# NUNCA envie o .env real para a imagem Docker
 .env
 .env.*
 !.env.example
@@ -14,7 +15,7 @@
 # =========================
 # Backups e dados locais
 # =========================
-backup
+backup/
 *.tar
 *.tar.gz
 *.gpg
@@ -23,23 +24,27 @@ backup
 # Logs
 # =========================
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # =========================
 # SO / Editor
 # =========================
 .DS_Store
 Thumbs.db
-.idea
-.vscode
+.idea/
+.vscode/
 
 # =========================
 # Node / Build
 # =========================
-node_modules
-npm-debug.log
-yarn-error.log
+node_modules/
 
 # =========================
-# Docker
+# Docker & Infra
 # =========================
 docker-compose.override.yml
+Makefile
+.n8n/
+binaryData/
